--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <img src="images/academy-brand.png" title="AWESOME" alt="academy-brand">
               <h2>WHO WE ARE</h2>
               <hr>
-              <p>We are <a href="http://ppibelgia.be" target="_blank"> AWESOME.</a> We are who you should follow. We are the most famous people on the entire planet. We are the people. We are the future. We are the only savior this                world needs. We are nobody.</p>
+              <p>We are <a href="http://ppibelgia.be" target="_blank"> AWESOME.</a> We are who you should follow. We are the most famous people on the entire planet. We are the people. We are the future. We are the only savior this                world needs. We are nobody. Apa yang salah ya???</p>
           </div>
       </div>
     <div id="get-involved">  
